# gdalcubes_cpp

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE_THIRDPARTY  NEWS.md  README.md  TODO.md  annotated.html  annotated_dup.js  apply__pixel_8h_source.html  build__info_8h_source.html  classes.html  classgdalcubes_1_1apply__pixel__cube-members.html  classgdalcubes_1_1apply__pixel__cube.html  classgdalcubes_1_1apply__pixel__cube.js  classgdalcubes_1_1band__collection-members.html  classgdalcubes_1_1band__collection.html  classgdalcubes_1_1band__collection.js  classgdalcubes_1_1chunk__data-members.html  classgdalcubes_1_1chunk__data.html  classgdalcubes_1_1chunk__data.js  classgdalcubes_1_1chunk__processor-members.html  classgdalcubes_1_1chunk__processor.html  classgdalcubes_1_1chunk__processor.js  classgdalcubes_1_1chunk__processor__multithread-members.html  classgdalcubes_1_1chunk__processor__multithread.html  classgdalcubes_1_1chunk__processor__multithread.js  classgdalcubes_1_1chunk__processor__singlethread-members.html  classgdalcubes_1_1chunk__processor__singlethread.html  classgdalcubes_1_1chunk__processor__singlethread.js  classgdalcubes_1_1collection__format-members.html  classgdalcubes_1_1collection__format.html  classgdalcubes_1_1collection__format.js  classgdalcubes_1_1config-members.html  classgdalcubes_1_1config.html  classgdalcubes_1_1config.js  classgdalcubes_1_1cube-members.html  classgdalcubes_1_1cube.html  (+406 more)
.github/workflows/: ubuntu-16.04.yml
.github/workflows/ubuntu-16.04/: install_dependencies.sh
Rpkg/gdalcubes/: DESCRIPTION  NAMESPACE  example.R
Rpkg/gdalcubes/R/: RcppExports.R  apply_pixel.R  collection_format.R  config.R  cube.R  eval.R  gdalcubes.R  image_collection.R  join_bands.R  plot.R  read_stream.R  reduce.R  select_bands.R  server.R  stream.R  streaming.R  view.R  zzz.R
Rpkg/gdalcubes/src/: Makevars  RcppExports.cpp  gdalcubes.cpp  test.cpp
Rpkg/gdalcubes/vignettes/: getting_started.Rmd
demo/: Dockerfile
doc/: data_views.md  distributed.md  image_collections.md  mkdocs.yml
doc/docs/: R.md  S2R.md  concepts.md  credits.md  getting_started.md  index.md  installation.md  server-api.md  tutorial.md
doc/doxygen/: annotated.html  annotated_dup.js  build__info_8h_source.html  classband__collection-members.html  classband__collection.html  classband__collection.js  classchunk__data-members.html  classchunk__data.html  classchunk__data.js  classchunk__processor-members.html  classchunk__processor.html  classchunk__processor.js  classchunk__processor__multithread-members.html  classchunk__processor__multithread.html  classchunk__processor__multithread.js  classchunk__processor__singlethread-members.html  classchunk__processor__singlethread.html  classchunk__processor__singlethread.js  classcollection__format-members.html  classcollection__format.html  classcollection__format.js  classconfig-members.html  classconfig.html  classconfig.js  classcube-members.html  classcube.html  classcube.js  classcube__st__reference-members.html  classcube__st__reference.html  classcube__st__reference.js  classcube__view-members.html  classcube__view.html  classcube__view.js  classdatetime-members.html  classdatetime.html  classdatetime.js  classes.html  classgdalcubes__server-members.html  classgdalcubes__server.html  classgdalcubes__server.js  (+129 more)
doc/doxygen/search/: all_1.js  all_10.js  all_2.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  searchdata.js
formats/: CHIRPS-2.0_p05_tif.json  CHIRPS_v2_0_daily_p05_tif.json  CHIRPS_v2_0_monthly_p05_tif.json  L8_L1TP.json  L8_SR.json  MCD64A1.json  MOD11A1.json  MOD11A2.json  MOD13A3.json  MOD13A3_local.json  MxD11A1.json  MxD11A2.json  MxD13A3.json  MxD14A2.json  README.md  Sentinel2_L1C_local.json  Sentinel2_L2A_local.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+32 more)
src/: CMakeLists.txt  Doxyfile  aggregate_space.cpp  aggregate_time.cpp  aggregate_time.h  apply_pixel.cpp  apply_pixel.h  build_info.h  build_info.h.in  chunking.cpp  chunking.h  collection_format.cpp  collection_format.h  config.cpp  config.h  coord_types.h  crop.cpp  crop.h  cube.cpp  cube.h  cube_factory.cpp  cube_factory.h  datetime.cpp  datetime.h  dummy.cpp  dummy.h  error.cpp  error.h  example.cpp  extract_geom.cpp  extract_geom.h  filesystem.cpp  filesystem.h  fill_time.cpp  fill_time.h  filter_geom.cpp  filter_geom.h  filter_pixel.cpp  filter_pixel.h  filter_predicate.cpp  (+60 more)
src/test/: test_aggregate_time.cpp  test_datetime.cpp  test_filesystem.cpp  test_main.cpp  test_sampledata.cpp  test_view.cpp
test/: cli_test_commands.txt  collection_format_test.json  stream_example.R  test_list.txt  view.json  view2.json
